--- a/firewall_zones/vyos_remote/local/from-wan-ipv4.yml
+++ b/firewall_zones/vyos_remote/local/from-wan-ipv4.yml
@@ -11,8 +11,8 @@
   protocol: "tcp"
   state:
     new: true
-- description: "Allow Wireguard"
-  action: "accept"
+- description: Allow Wireguard
+  action: accept
   destination:
-    port: "51820-51822"
-  protocol: "udp"
+    port: "51820-51824"
+  protocol: udp
