--- a/host_vars/tartarus01.tswn.us.yml
+++ b/host_vars/tartarus01.tswn.us.yml
@@ -199,6 +199,14 @@ vyos_ospfv2__neighbors:
 
 vyos_ospfv2_parameters__router_id: "149.248.37.12"
 
+vyos_static_routes__config:
+  - address_families:
+    - afi: ipv4
+      routes:
+        - dest: 0.0.0.0/0
+          next_hops:
+            - forward_router_address: 149.248.36.1
+
 # This uses a local DNS forwarding server, so use that.
 vyos_system__name_servers:
   - "127.0.0.1"
