--- a/vyos.yml
+++ b/vyos.yml
@@ -165,6 +165,30 @@
         - services
 
 #
+# vyos_cloud
+#
+
+- hosts: vyos_cloud
+  gather_facts: false
+  tasks:
+    - name: Setup default cloud gateway route
+      vyos.vyos.vyos_config:
+        lines:
+          - "set protocols static table 10 route 0.0.0.0/0 next-hop {{ nexthop }}"
+          - set policy route CLOUD rule 10 set table 10
+      vars:
+        nexthop: >-
+          {{ hostvars['tartarus01.tswn.us'].vyos_interfaces__wireguard |
+              selectattr('description', 'eq', inventory_hostname + ' wg0') |
+              map(attribute='ipv4') |
+              first |
+              map(attribute='address') |
+              first |
+              ansible.utils.ipaddr('address') }}
+      tags:
+        - routing
+
+#
 # vyos_home
 #
 
