Move the Unifi Controller to the new tunnel-based stack
This now routes most (more on that later) traffic that the Unifi
Controller has through the remote tunnel in the cloud.  This way, any
remote site that is trying to phone home to the controller hits the VPS
in a datacenter, and never the home internet connection.

Some traffic for the local network hackily goes through the MAN network,
for now.  I've filed #4 to clean that up, but there is some other work
that needs to be handled before that can be tackled.  Search code for
`TODO(#4)` to find all the places that need to be adjusted.

--- a/firewall_zones/vyos_home/man/from-home-ipv4.yml
+++ b/firewall_zones/vyos_home/man/from-home-ipv4.yml
@@ -38,3 +38,13 @@
   source:
     group:
       address_group: "FILE-SERVER-v4"
+  # TODO(#4): This is temporary until home router moves onto the transit stack
+- description: Allow access to Unifi Web port
+  action: accept
+  state:
+    new: true
+  destination:
+    address: 10.82.0.2
+    group:
+      port_group: UNIFI-WEB-TCP
+  protocol: tcp
