--- a/firewall_zones/vyos_cloud/unifi/from-remote-tun-ipv4.yml
+++ b/firewall_zones/vyos_cloud/unifi/from-remote-tun-ipv4.yml
@@ -1,5 +1,10 @@
 ---
-- description: Allow access to Unifi TCP ports
+- description: Allow ICMP
+  action: accept
+  protocol: icmp
+  icmp:
+    type_name: any
+- description: Allow access to UNIFI TCP ports
   action: accept
   state:
     new: true
@@ -8,7 +13,7 @@
       address_group: UNIFI-v4
       port_group: UNIFI-DEVICE-TCP
   protocol: tcp
-- description: Allow access to Unifi UDP ports
+- description: Allow access to UNIFI UDP ports
   action: accept
   state:
     new: true
@@ -16,4 +21,3 @@
     group:
       address_group: UNIFI-v4
       port_group: UNIFI-DEVICE-UDP
-  protocol: udp
