--- a/roles/docker-networks/tasks/main.yml
+++ b/roles/docker-networks/tasks/main.yml
@@ -41,21 +41,21 @@
     - common__additional_ethernet_interfaces is defined
     - common__additional_ethernet_interfaces | selectattr("name", "match", docker_networks__parent_interface + ".117") | list | length > 0
 
-- name: "Create SERVICE82 network"
+- name: Create SERVICE82 network
   community.docker.docker_network:
     attachable: yes
-    driver: "macvlan"
+    driver: macvlan
     driver_options:
       parent: "{{ docker_networks__parent_interface }}.82"
     enable_ipv6: no
-    ipam_driver: "default"
+    ipam_driver: default
     ipam_config:
       - subnet: 10.82.0.0/24
-        gateway: 10.82.0.1
-    name: "service82"
-    state: "present"
+        gateway: 10.82.0.78
+    name: service82
+    state: present
   vars:
-    ansible_python_interpreter: "/usr/bin/env python3-docker"
+    ansible_python_interpreter: /usr/bin/env python3-docker
   when:
     - common__additional_ethernet_interfaces is defined
     - common__additional_ethernet_interfaces | selectattr("name", "match", docker_networks__parent_interface + ".82") | list | length > 0
