add tanzu routers

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -166,6 +166,12 @@ bind_zones:
         ip: "10.10.0.56"
       - name: "centurylink.routers.hogs"
         ip: "10.10.0.70"
+      - name: "tanzu.routers.hogs"
+        ip: "10.10.0.75"
+      - name: "tanzu01.routers.hogs"
+        ip: "10.10.0.76"
+      - name: "tanzu02.routers.hogs"
+        ip: "10.10.0.77"
       - name: "cloud.routers.hogs"
         ip: "10.10.0.78"
       - name: "cloud01.routers.hogs"
