allow dns forwarding for the tanzu cluster

--- a/firewall_zones/vyos_tanzu/local/from-tanzu-work-ipv4.yml
+++ b/firewall_zones/vyos_tanzu/local/from-tanzu-work-ipv4.yml
@@ -9,3 +9,11 @@
   protocol: icmp
   icmp:
     type_name: any
+- description: Allow DNS
+  action: accept
+  protocol: tcp_udp
+  state:
+    new: true
+  destination:
+    group:
+      port_group: DNS
