--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -48,6 +48,16 @@ bind_zones:
       - name: "upper-hallway-ip.unifi"
         ip: "10.1.0.53"
 
+      # Transit Network
+      - name: "tanzu.routers.hogs"
+        ip: "10.2.0.75"
+      - name: "cloud.routers.hogs"
+        ip: "10.2.0.78"
+      - name: "guest.routers.hogs"
+        ip: "10.2.0.81"
+      - name: "work.routers.hogs"
+        ip: "10.2.0.84"
+
       # HOME Network
       - name: "maccabeus.hogs"
         ip: "10.117.0.1"
@@ -166,26 +176,18 @@ bind_zones:
         ip: "10.10.0.56"
       - name: "centurylink.routers.hogs"
         ip: "10.10.0.70"
-      - name: "tanzu.routers.hogs"
-        ip: "10.10.0.75"
       - name: "tanzu01.routers.hogs"
         ip: "10.10.0.76"
       - name: "tanzu02.routers.hogs"
         ip: "10.10.0.77"
-      - name: "cloud.routers.hogs"
-        ip: "10.10.0.78"
       - name: "cloud01.routers.hogs"
         ip: "10.10.0.79"
       - name: "cloud02.routers.hogs"
         ip: "10.10.0.80"
-      - name: "guest.routers.hogs"
-        ip: "10.10.0.81"
       - name: "guest01.routers.hogs"
         ip: "10.10.0.82"
       - name: "guest02.routers.hogs"
         ip: "10.10.0.83"
-      - name: "work.routers.hogs"
-        ip: "10.10.0.84"
       - name: "work01.routers.hogs"
         ip: "10.10.0.85"
       - name: "work02.routers.hogs"
