--- a/firewall_zones/vyos_tanzu/tanzu-man/from-transit-ipv4.yml
+++ b/firewall_zones/vyos_tanzu/tanzu-man/from-transit-ipv4.yml
@@ -1,1 +1,10 @@
 ---
+- description: Allow vCenter to talk to Tanzu Supervisors
+  action: accept
+  destination:
+    group:
+      address_group: TANZU-SUP-v4
+  protocol: all
+  source:
+    group:
+      address_group: VCENTER-v4
