--- a/firewall_zones/vyos_tanzu/transit/from-tanzu-man-ipv4.yml
+++ b/firewall_zones/vyos_tanzu/transit/from-tanzu-man-ipv4.yml
@@ -4,6 +4,15 @@
   protocol: icmp
   icmp:
     type_name: any
+- description: Allow Tanzu Supervisors to talk to vCenter
+  action: accept
+  destination:
+    group:
+      address_group: VCENTER-v4
+  protocol: all
+  source:
+    group:
+      address_group: TANZU-SUP-v4
 - description: Drop local traffic
   action: reject
   log: enable
