--- a/group_vars/vyos_home.yml
+++ b/group_vars/vyos_home.yml
@@ -192,18 +192,11 @@ vyos_firewall_global__group:
         - address: "10.67.0.12"
         - address: "10.67.0.13"
         - address: "10.67.0.14"
-    - name: "HASS-CIFS-from-MAN-v4"
-      description: "IP Addresses from MAN that can talk to HASS Samba Server ({{ ansible_managed }})"
+    - name: "CAMERA-TALKERS-v4"
+      description: "The v4 addresses of devices that can talk to the cameras"
       afi: "ipv4"
       members:
-        # docker-vm.hogs.tswn.us
-        - address: "10.10.0.6"
-    - name: "HASS-CIFS-from-MAN-v6"
-      description: "IP Addresses from MAN that can talk to HASS Samba Server ({{ ansible_managed }})"
-      afi: "ipv6"
-      members:
-        # docker-vm.hogs.tswn.us
-        - address: "fd36:3eb3:43b0:a::6"
+        - address: "10.117.0.23"
     - name: "FILE-SERVER-v4"
       description: "IP Addresses for the NFS Server ({{ ansible_managed }})"
       afi: "ipv4"
@@ -216,6 +209,18 @@ vyos_firewall_global__group:
       members:
         # firstlightweaveslivingsong.hogs.tswn.us
         - address: "fd36:3eb3:43b0:75::a"
+    - name: "HASS-CIFS-from-MAN-v4"
+      description: "IP Addresses from MAN that can talk to HASS Samba Server ({{ ansible_managed }})"
+      afi: "ipv4"
+      members:
+        # docker-vm.hogs.tswn.us
+        - address: "10.10.0.6"
+    - name: "HASS-CIFS-from-MAN-v6"
+      description: "IP Addresses from MAN that can talk to HASS Samba Server ({{ ansible_managed }})"
+      afi: "ipv6"
+      members:
+        # docker-vm.hogs.tswn.us
+        - address: "fd36:3eb3:43b0:a::6"
     - name: "MAN-TALKERS-from-HOME-v4"
       description: "IP Addresses allowed to talk to devices on MAN ({{ ansible_managed }})"
       members:
@@ -291,11 +296,18 @@ vyos_firewall_global__group:
       members:
         - address: "fd36:3eb3:43b0:a::{{ vyos__peer_host_id_ipv6 }}"
         - address: "fd36:3eb3:43b0:75::{{ vyos__peer_host_id_ipv6 }}"
-    - name: "CAMERA-TALKERS-v4"
-      description: "The v4 addresses of devices that can talk to the cameras"
-      afi: "ipv4"
+    - name: TANZU-SUP-v4
+      description: vCenter Tanzu Supervisor IP Addresses
+      afi: ipv4
       members:
-        - address: "10.117.0.23"
+        - address: 10.95.0.11
+        - address: 10.95.0.12
+        - address: 10.95.0.13
+    - name: VCENTER-v4
+      description: vCenter IP Addresses
+      afi: ipv4
+      members:
+        - address: 10.10.0.5
     - name: "ZABBIX-SERVER-v4"
       description: "The v4 server.zabbix.hogs.tswn.us addresses"
       afi: "ipv4"
@@ -429,6 +441,9 @@ vyos_static_routes__config:
         - dest: 10.82.0.0/24
           next_hops:
             - forward_router_address: 10.2.0.78
+        - dest: 10.95.0.0/23
+          next_hops:
+            - forward_router_address: 10.2.0.75
 
 # This uses a local DNS forwarding server, so use that.
 vyos_system__name_servers:
