--- a/firewall_zones/vyos_tanzu/transit/from-local-ipv4.yml
+++ b/firewall_zones/vyos_tanzu/transit/from-local-ipv4.yml
@@ -17,3 +17,11 @@
   destination:
     group:
       port_group: DNS
+- description: Allow NTP
+  action: accept
+  state:
+    new: true
+  destination:
+    group:
+      address_group: NTP-SERVICES-v4
+      port_group: NTP
