--- a/vyos.yml
+++ b/vyos.yml
@@ -425,6 +425,7 @@
           - set protocols static table 10 route 0.0.0.0/0 next-hop 10.2.0.70
           - set policy route 'TANZU-MAN' rule 10 set table 10
           - set protocols static table 10 route 10.10.0.0/24 next-hop 10.2.0.72
+          - set protocols static table 10 route 10.117.0.0/23 next-hop 10.2.0.72
           - set interfaces ethernet eth1 vif 95 policy route 'TANZU-MAN'
       tags:
         - routing
