more work to get tanzu working

--- a/firewall_zones/vyos_tanzu/tanzu-man/from-transit-ipv4.yml
+++ b/firewall_zones/vyos_tanzu/tanzu-man/from-transit-ipv4.yml
@@ -8,3 +8,10 @@
   source:
     group:
       address_group: VCENTER-v4
+- description: Allow specific hosts full access
+  action: accept
+  state:
+    new: true
+  source:
+    group:
+      address_group: TANZU-FULL-ACCESS-from-HOME-v4
