--- a/firewall_zones/vyos_home/transit/from-home-ipv4.yml
+++ b/firewall_zones/vyos_home/transit/from-home-ipv4.yml
@@ -4,6 +4,13 @@
   protocol: icmp
   icmp:
     type_name: any
+- description: Allow specific hosts
+  action: accept
+  state:
+    new: true
+  source:
+    group:
+      address_group: MAN-TALKERS-from-HOME-v4
 - description: Allow access to Unifi Web port
   action: accept
   state:
