--- a/group_vars/vyos_home.yml
+++ b/group_vars/vyos_home.yml
@@ -387,6 +387,9 @@ vyos_static_routes__config:
         - dest: 10.95.0.0/23
           next_hops:
             - forward_router_address: 10.2.0.75
+        - dest: 10.96.0.0/23
+          next_hops:
+            - forward_router_address: 10.2.0.75
 
 # This uses a local DNS forwarding server, so use that.
 vyos_system__name_servers:
