--- a/group_vars/vyos_home.yml
+++ b/group_vars/vyos_home.yml
@@ -209,13 +209,6 @@ vyos_firewall_global__group:
       members:
         # docker-vm.hogs.tswn.us
         - address: "10.10.0.6"
-    - name: "MAN-TALKERS-from-HOME-v4"
-      description: "IP Addresses allowed to talk to devices on MAN ({{ ansible_managed }})"
-      members:
-        # lighterthansome.hogs.tswn.us (sdwilsh-laptop)
-        - address: 10.117.0.9
-        # sdwilsh-desktop
-        - address: "10.117.0.31"
     - name: "MYSQL-SERVER-v4"
       description: "The v4 mysql.hogs.tswn.us addresses"
       afi: "ipv4"
@@ -251,6 +244,15 @@ vyos_firewall_global__group:
         - address: "10.131.0.{{ vyos__peer_host_id_ipv4 }}"
         - address: "10.150.0.{{ vyos__peer_host_id_ipv4 }}"
         - address: "172.16.5.{{ vyos__peer_host_id_ipv4 }}"
+    - name: SERVICE-TALKERS-v4
+      description: IP Addresses allowed to talk to services
+      members:
+        # sdwilsh-dev.hogs.tswn.us (sdwilsh-dev)
+        - address: 10.10.0.20
+        # lighterthansome.hogs.tswn.us (sdwilsh-laptop)
+        - address: 10.117.0.9
+        # sdwilsh-desktop
+        - address: 10.117.0.31
     - name: TANZU-SUP-v4
       description: vCenter Tanzu Supervisor IP Addresses
       afi: ipv4
