--- a/firewall_zones/vyos_tanzu/transit/from-tanzu-work-ipv4.yml
+++ b/firewall_zones/vyos_tanzu/transit/from-tanzu-work-ipv4.yml
@@ -4,6 +4,15 @@
   protocol: icmp
   icmp:
     type_name: any
+- description: Allow Connections to NFS
+  action: accept
+  protocol: tcp_udp
+  state:
+    new: true
+  destination:
+    group:
+      address_group: FILE-SERVER-v4
+      port_group: NFS
 - description: Drop local traffic
   action: reject
   log: enable
